# skel

./: Cargo.toml
src/: config.rs  content.rs  error.rs  lib.rs  skeleton.rs  util.rs
src/config/: fs_helpers.rs  kdl_helpers.rs  project.rs  skeleton.rs  task.rs
