[package]
name = "skel"
version = "0.1.0"
edition = "2021"

[lib]
name = "skel"
path = "src/lib.rs"

[[bin]]
name = "skel"
path = "bin/skel.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
feruca = "0.10.0"
kdl = "4.6.0"
miette = { version = "5.10.0", features = ["fancy"] }
tera = "1.19.1"
thiserror = "1.0.56"

[dev-dependencies]
tempfile = "3.9.0"
